--- a/src/components/lb.css
+++ b/src/components/lb.css
@@ -142,7 +142,7 @@
       background-color: #FAFAFA;
       color:black;
       width:100vw;
-      height: 70px;
+      height: 10vh;
       border:1px black solid;
       border-color: #D5D7DA;
       justify-content: center;
